# CV_2

./: .gitignore  CMakeLists.txt  README.md
docs/: Const.md  Huang.md  Results.md  Sort.md  Tests.md
include/Filters/: ConstantTimeMedianFilter.cpp  ConstantTimeMedianFilter.h  HuangMedianFilter.cpp  HuangMedianFilter.h  IMedianFilter.h  SortMedianFilter.cpp  SortMedianFilter.h
include/Utils/: process_input.h  test_filter.h  utils.cpp  utils.h
programs/: apply_filter.cpp  apply_opencv_filters.cpp  test_filters.cpp
tests_results/: process_results.ipynb  test_time.sh
tests_results/time_results/: Const_Cat_picture.npy  Const_Landscape.npy  Huang_Cat_picture.npy  Huang_Landscape.npy  Sort_Cat_picture.npy  Sort_Landscape.npy  make_datasets.py  opencv_Cat_picture.npy  opencv_Landscape.npy
